Fixed overflow and wrong scaling when zooming in
Added a bit of media querries to fix the website when you zoom in.

--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ body {
 
 .container {
     width: 90%;
-    max-width: 1200px;
     margin: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 h1,
@@ -60,6 +61,13 @@ header .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+@media only screen and (max-width: 600px) {
+    header .container {
+        flex-direction: column;
+        margin: 0;
+    }
 }
 
 header ul {
@@ -118,6 +126,7 @@ section {
     display: flex;
     justify-content: space-between;
 }
+
 
 .feature-item {
     flex: 1;
@@ -213,4 +222,45 @@ footer a:hover {
 .btn-sa {
     background: linear-gradient(150deg, #2ab9a5 0%, #69B53F 50%, #2ab9a5 100%);
     border: 0px solid white !important;
+}
+
+
+@media only screen and (max-width: 600px) {
+    .features>.container,
+    .feature-list {
+        text-align: center;
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .downloads .container {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .community .container {
+        flex-direction: column;
+        text-align: center;
+    }
+    .community .container > ul {
+        list-style-type: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .news .container {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    footer .container {
+        flex-direction: column;
+        text-align: center;
+    }
 }
